infra/k8s/assets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assets
  template:
    metadata:
      labels:
        app: assets
    spec:
      containers:
        - name: assets
          image: asia-south2-docker.pkg.dev/asset-dev-509615/ticketing/assets
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: assets-serv
spec:
  selector:
    app: assets
  ports:
    - name: assets
      protocol: TCP
      port: 3000
      targetPort: 3000
