infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:alpine
          args:
            - "-js" # Jetstream
            - "-m" # Monitoring
            - "8222"
          ports:
            - containerPort: 4222
              name: client
            - containerPort: 8222
              name: monitoring
---
apiVersion: v1
kind: Service
metadata:
  name: nats-serv
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
